<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <RadioGroup
        android:id="@+id/timer_selection_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/timer_15_min"
            android:text="@string/_15_min_timer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:id="@+id/timer_30_min"
            android:text="@string/_30_min_timer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:id="@+id/timer_1_hour"
            android:text="@string/_1_hour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:id="@+id/timer_custom"
            android:text="@string/timer_custom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/timer_custom_tv"
            android:hint="@string/time_in_minutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RadioGroup>


</LinearLayout>